convert project to react

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,18 +1,17 @@
 appId: com.electron.app
-productName: frontend
+productName: code_review
 directories:
   buildResources: build
 files:
   - '!**/.vscode/*'
   - '!src/*'
   - '!electron.vite.config.{js,ts,mjs,cjs}'
-  - '!svelte.config.mjs'
   - '!{.eslintcache,eslint.config.mjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
 asarUnpack:
   - resources/**
 win:
-  executableName: frontend
+  executableName: code_review
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
