--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "frontend",
+  "name": "code_review",
   "version": "1.0.0",
-  "description": "An Electron application with Svelte",
+  "description": "An Electron application with React",
   "main": "./out/main/index.js",
   "author": "example.com",
   "homepage": "https://electron-vite.org",
   "scripts": {
-    "format": "prettier --plugin prettier-plugin-svelte --write .",
+    "format": "prettier --write .",
     "lint": "eslint --cache .",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
@@ -25,15 +25,17 @@
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^2.0.0",
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
-    "@sveltejs/vite-plugin-svelte": "^6.1.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "electron": "^37.2.3",
     "electron-builder": "^25.1.8",
     "electron-vite": "^4.0.0",
     "eslint": "^9.31.0",
-    "eslint-plugin-svelte": "^3.11.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "prettier": "^3.6.2",
-    "prettier-plugin-svelte": "^3.4.0",
-    "svelte": "^5.36.10",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "vite": "^7.0.5"
   }
 }
