--- a/package.json
+++ b/package.json
@@ -24,16 +24,21 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@openai/agents": "^0.0.17",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-router": "^1.131.31",
+    "@tanstack/react-router-devtools": "^1.131.31",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "effect": "^3.17.9",
     "electron-updater": "^6.3.9",
+    "embla-carousel-react": "^8.6.0",
     "express": "^5.1.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.541.0",
     "openai": "^5.16.0",
     "react-icons": "^5.5.0",
@@ -47,6 +52,7 @@
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@tanstack/router-plugin": "^1.131.31",
     "@types/express": "^5.0.3",
     "@types/node": "^22.18.0",
     "@types/react": "^19.1.8",
